--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <div class="container">
     <h1>RIM Adventkalender 2020</h1>
     <div class="tree">
-      <!-- <div id="star">⭐️</div> -->
-      
       <div class="img">
-        <!-- <div class="ball ball-l ball-red" id="ball1">1</div>
+        <div id="star">⭐️</div>
+        <div class="ball ball-l ball-red" id="ball1">1</div>
         <div class="ball ball-m ball-blue" id="ball2">2</div>
         <div class="ball ball-s ball-red" id="ball3">3</div>
         <div class="ball ball-m ball-yellow" id="ball4">4</div>
@@ -37,7 +36,7 @@
         <div class="ball ball-m ball-red" id="ball21">21</div>
         <div class="ball ball-l ball-blue" id="ball22">22</div>
         <div class="ball ball-m ball-yellow" id="ball23">23</div>
-        <div class="ball ball-s ball-blue" id="ball24">24</div> -->
+        <div class="ball ball-s ball-blue" id="ball24">24</div>
       </div>
     </div>
   </div>
