--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="./css/styles.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./js/script.js"></script>
+  <audio src="./audio/letitsnow.mp3" controls loop autoplay></audio>
   <title>RIM Adventkalender 2020</title>
 </head>
 <body>
