rearranging colors, adding gradients

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
       <div class="img">
         <div id="star">⭐️</div>
         <div class="ball ball-l ball-red" id="ball1">1</div>
-        <div class="ball ball-m ball-blue" id="ball2">2</div>
-        <div class="ball ball-s ball-red" id="ball3">3</div>
+        <div class="ball ball-m ball-green" id="ball2">2</div>
+        <div class="ball ball-l ball-yellow" id="ball3">3</div>
         <div class="ball ball-m ball-yellow" id="ball4">4</div>
         <div class="ball ball-m ball-red" id="ball5">5</div>
-        <div class="ball ball-s ball-blue" id="ball6">6</div>
+        <div class="ball ball-m ball-green" id="ball6">6</div>
         <div class="ball ball-m ball-yellow" id="ball7">7</div>
-        <div class="ball ball-l ball-blue" id="ball8">8</div>
-        <div class="ball ball-s ball-red" id="ball9">9</div>
-        <div class="ball ball-m ball-yellow" id="ball10">10</div>
-        <div class="ball ball-m ball-blue" id="ball11">11</div>
+        <div class="ball ball-l ball-green" id="ball8">8</div>
+        <div class="ball ball-l ball-red" id="ball9">9</div>
+        <div class="ball ball-l ball-yellow" id="ball10">10</div>
+        <div class="ball ball-m ball-green" id="ball11">11</div>
         <div class="ball ball-l ball-red" id="ball12">12</div>
-        <div class="ball ball-s ball-red" id="ball13">13</div>
+        <div class="ball ball-m ball-red" id="ball13">13</div>
         <div class="ball ball-m ball-yellow" id="ball14">14</div>
-        <div class="ball ball-l ball-blue" id="ball15">15</div>
+        <div class="ball ball-l ball-green" id="ball15">15</div>
         <div class="ball ball-m ball-yellow" id="ball16">16</div>
-        <div class="ball ball-s ball-red" id="ball17">17</div>
-        <div class="ball ball-m ball-blue" id="ball18">18</div>
-        <div class="ball ball-s ball-red" id="ball19">19</div>
+        <div class="ball ball-l ball-red" id="ball17">17</div>
+        <div class="ball ball-m ball-green" id="ball18">18</div>
+        <div class="ball ball-l ball-red" id="ball19">19</div>
         <div class="ball ball-l ball-yellow" id="ball20">20</div>
         <div class="ball ball-m ball-red" id="ball21">21</div>
-        <div class="ball ball-l ball-blue" id="ball22">22</div>
-        <div class="ball ball-m ball-yellow" id="ball23">23</div>
-        <div class="ball ball-s ball-blue" id="ball24">24</div>
+        <div class="ball ball-l ball-green" id="ball22">22</div>
+        <div class="ball ball-m ball-green" id="ball23">23</div>
+        <div class="ball ball-l ball-red" id="ball24">24</div>
       </div>
     </div>
   </div>
