--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" href="./css/styles.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./js/script.js"></script>
-  <audio src="./audio/letitsnow.mp3" controls loop autoplay></audio>
   <title>RIM Adventkalender 2020</title>
 </head>
 <body>
+  <audio id="player" src="./audio/letitsnow.mp3" controls loop autoplay></audio>
   <div class="container">
     <h1>RIM Adventkalender 2020</h1>
     <div class="tree">
@@ -39,6 +39,178 @@
         <div class="ball ball-m ball-green" id="ball23">23</div>
         <div class="ball ball-l ball-red" id="ball24">24</div>
       </div>
+    </div>
+  </div>
+  <div class="day" id="day1">
+    <div id="popup">
+      <div id="close">X</div>
+      <div class="overlay">
+        <h1>1. Dezember</h1>
+        <h2>Peter</h2>
+        <p>"Einen schönen ersen Adventtag wünscht Euch Peter. Think positiv, test negativ."</p>
+        Peter hat für uns eine großartige <a target="_blank" href="audio/day1.mp4">Audionachricht</a> aufgenommen.<br />
+      </div>
+    </div>
+  </div>
+  <div class="day" id="day2">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day3">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day4">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day5">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day6">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day7">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day8">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day9">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day10">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day11">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day12">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day13">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day14">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day15">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day16">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day17">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day18">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day19">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day20">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day21">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day22">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day23">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
+    </div>
+  </div>
+  <div class="day" id="day24">
+    <div id="popup">
+      <div id="close">X</div>
+      <h2>This is a popup</h2>
+      <p>You just triggered a popup</p>
     </div>
   </div>
 </body>
