--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
   </div>
   <div class="day" id="day2">
     <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
+      <div class="overlay">
+        <h1>2. Dezember</h1>
+        <i>-- Alex</i>
+        <p>"Da leider Langenzersdorf z.Zt. grau und nicht weiß ist, musste ich auf einen Besuch in St. Gilgen am Wolfgangsees zurückgreifen 🧑‍🎄⛄️"</p>
+        <img src="./img/day2/kerze.jpeg" alt="Die Kerzer"/>
+      </div>
       <div id="close">X</div>
     </div>
   </div>
