--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Peter hat für uns eine großartige <a target="_blank" href="audio/day1.mp4">Audionachricht</a> aufgenommen.</p>
         <p>"Einen schönen ersen Adventtag wünscht Euch Peter. Think positiv, test negativ."</p>
         <p>Der Winter</p>
-        <img src="./img/day1/der_winter.jpeg" alt="Der Winter"/>
+        <img src="./img/day1/der_winter.jpeg" alt="Der Winter" />
       </div>
       <div id="close">X</div>
     </div>
@@ -61,15 +61,19 @@
         <h1>2. Dezember</h1>
         <i>-- Alex</i>
         <p>"Da leider Langenzersdorf z.Zt. grau und nicht weiß ist, musste ich auf einen Besuch in St. Gilgen am Wolfgangsees zurückgreifen 🧑‍🎄⛄️"</p>
-        <img src="./img/day2/kerze.jpeg" alt="Die Kerzer"/>
+        <img src="./img/day2/kerze.jpeg" alt="Die Kerze" />
       </div>
       <div id="close">X</div>
     </div>
   </div>
   <div class="day" id="day3">
     <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
+      <div class="overlay">
+        <h1>3. Dezember</h1>
+        <i>-- Anita</i>
+        <p></p>
+        <img src="./img/day3/anita.jpeg" alt="day3" />
+      </div>
       <div id="close">X</div>
     </div>
   </div>
