--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
   </div>
   <div class="day" id="day4">
     <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
+      <div class="overlay">
+        <h1>4. Dezember</h1>
+        <i>-- Philipp M.</i>
+        <p>"Unser erster "Schneemann" der startenden Wintersaisn... 😜"</p>
+        <img src="./img/day4/snowman.jpeg" alt="snowman" />
+      </div>
       <div id="close">X</div>
     </div>
   </div>
