--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <div class="overlay">
         <h1>1. Dezember</h1>
         <i>-- Peter</i>
-        <p>Peter hat für uns eine großartige <a target="_blank" href="audio/day1.mp4">Audionachricht</a> aufgenommen.</p>
-        <p>"Einen schönen ersen Adventtag wünscht Euch Peter. Think positiv, test negativ."</p>
+        <p><i>Peter hat für uns eine großartige <a target="_blank" href="audio/day1/day1.mp4">Audionachricht</a> aufgenommen.</i></p>
+        <p>Einen schönen ersen Adventtag wünscht Euch Peter. Think positiv, test negativ.</p>
         <p>Der Winter</p>
         <img src="./img/day1/der_winter.jpeg" alt="Der Winter" />
       </div>
