--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="overlay">
         <h1>2. Dezember</h1>
         <i>-- Alex</i>
-        <p>"Da leider Langenzersdorf z.Zt. grau und nicht weiß ist, musste ich auf einen Besuch in St. Gilgen am Wolfgangsees zurückgreifen 🧑‍🎄⛄️"</p>
+        <p>Da leider Langenzersdorf z.Zt. grau und nicht weiß ist, musste ich auf einen Besuch in St. Gilgen am Wolfgangsees zurückgreifen 🧑‍🎄⛄️</p>
         <img src="./img/day2/kerze.jpeg" alt="Die Kerze" />
       </div>
       <div id="close">X</div>
@@ -82,7 +82,7 @@
       <div class="overlay">
         <h1>4. Dezember</h1>
         <i>-- Philipp M.</i>
-        <p>"Unser erster "Schneemann" der startenden Wintersaisn... 😜"</p>
+        <p>Unser erster "Schneemann" der startenden Wintersaisn... 😜</p>
         <img src="./img/day4/snowman.jpeg" alt="snowman" />
       </div>
       <div id="close">X</div>
