--- a/index.html
+++ b/index.html
@@ -90,8 +90,23 @@
   </div>
   <div class="day" id="day5">
     <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
+      <div class="overlay">
+        <h1>5. Dezember</h1>
+        <i>-- Mark</i>
+        <p>Heute eine kleine Mitmach-Übung 😊<br/>
+          Stimmt über euren Lieblings-Weihnachtsfilm ab 📺🎅🏼<br/>
+          Ich hab eine kleine Liste zusammengestellt - bitte votet für euren Favoriten - ich poste am Nachmittag die Ergebnisse.<br/>
+          Sollte euer Lieblingsfilm fehlen, dann votet bitte für jenen Film, der euch am ehesten zusagt und postet euren Lieblingsfilm hier mit Trailer 🎬<br/>
+          https://www.menti.com/k18u4zvup5  <br/>
+        </p>
+        <p>And the winner is...</p>
+        <img src="./img/day5/fav_movie.jpeg" alt="Favorite Christmas Movies" />
+        <ol>
+          <li>Tatsächlich Liebe</li>
+          <li>Kevin allein zuhaus</li>
+          <li>Stirb langsam und Mundl</li>
+        </ol>
+      </div>
       <div id="close">X</div>
     </div>
   </div>
