--- a/index.html
+++ b/index.html
@@ -112,107 +112,17 @@
   </div>
   <div class="day" id="day6">
     <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day7">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day8">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day9">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day10">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day11">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day12">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day13">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day14">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day15">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day16">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day17">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day18">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day19">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
-    </div>
-  </div>
-  <div class="day" id="day20">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
+      <div class="overlay">
+        <h1>6. Dezember</h1>
+        <i>-- Theresa</i>
+        <p>Hallo, meine Lieben! 🤗<br />Ich wünsche euch einen schönen zweiten Adventsonn- und Nikolotag. 🎄 🎅🏻 Dir Niki auch alles Gute zum Namenstag! 😉<br />
+          Heute ist der perfekte Anlass zum Teilen und Schenken. Darum lasst uns das Glück und die Freude, die wir jeden Tag gemeinsam erleben, an andere weitergeben. Auf funkelnde Kinderaugen!  #SpendeKindertraum</p>
+          <img src="./img/day6/cookies1.jpeg" alt="cookies" />
+          <p>Andi wollte auch Lebkuchen machen. Dachte er macht vielleicht Sterne oder Christbäume. Das ist dabei raus gekommen. 😆😅🙈</p>
+          <img src="./img/day6/cookies2.jpeg" alt="cookies" />
+        </div>
+        <div id="close">X</div>
+      </div>
     </div>
   </div>
   <div class="day" id="day21">
