--- a/index.html
+++ b/index.html
@@ -124,12 +124,16 @@
         <div id="close">X</div>
       </div>
     </div>
-  </div>
-  <div class="day" id="day21">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
+    <div class="day" id="day7">
+      <div id="popup">
+        <div class="overlay">
+          <h1>7. Dezember</h1>
+          <i>-- Marian</i>
+          <p>Rudolf das Rentier und seine zwei Helferlein wünschen euch eine schöne und hoffentlich stressfreie Adventszeit!🎄</p>
+          <img src="./img/day7/marian.jpeg" alt="Marian" />
+        </div>
+        <div id="close">X</div>
+      </div>
     </div>
   </div>
   <div class="day" id="day22">
