--- a/index.html
+++ b/index.html
@@ -135,12 +135,16 @@
         <div id="close">X</div>
       </div>
     </div>
-  </div>
-  <div class="day" id="day22">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
+    <div class="day" id="day8">
+      <div id="popup">
+        <div class="overlay">
+          <h1>8. Dezember</h1>
+          <i>-- Patrick</i>
+          <p>Heute kommt ein wenig Vorfreude auf Schnee und Skifahren😊🗻🎿⛷️</p>
+          <p><i>Hier ist der Link zum <a target="_blank" href="video/day8/day8.mp4">Video</a>.</i></p>
+        </div>
+        <div id="close">X</div>
+      </div>
     </div>
   </div>
   <div class="day" id="day23">
