--- a/index.html
+++ b/index.html
@@ -146,12 +146,31 @@
         <div id="close">X</div>
       </div>
     </div>
-  </div>
-  <div class="day" id="day23">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
+    <div class="day" id="day9">
+      <div id="popup">
+        <div class="overlay">
+          <h1>9. Dezember</h1>
+          <i>-- Geri</i>
+          <p>
+            Keiner traut sich zuzugeben, dieser schönen weihnachtlichen Tradition treu zu bleiben, aber die Statistik zeigt die Wahrheit. Jedes Jahr um diese Zeit singt (fast 😉) jeder von uns heimlich zu Hause Last Christmas oder All I Want For Christmas Is You. ⛄️🎅💃🎶🎵🎄❄️
+          </p>
+          <p>
+            Heuer ist es wieder soweit!!!
+            Am heutigen Tag darf ich euch (oder zumindest die zahlreichen Fans von “Tatsächlich Liebe“) mit diesem Ohrwurm anstecken.
+            Ein großer Vorteil vom Home Office - laut singen ist zu Hause erlaubt 🎶🎵
+          </p>
+          <p>
+            Und beim Singen wird die Botschaft klar - das beste Geschenk ist das Gemeinsamsein.
+            Genießt die Zeit mit euren Liebsten und lasst uns auf ein baldiges Treffen hoffen! #soon #RIMCocktail
+          </p>
+          <p>
+            ⚠️Vorsicht!!! Hoch ansteckend!<br />
+            <a target="_blank" href="https://youtube.com/watch?v=yXQViqx6GMY">https://youtube.com/watch?v=yXQViqx6GMY</a>
+          </p>
+          <img src="./img/day9/chart.jpeg" alt="chart" />
+        </div>
+        <div id="close">X</div>
+      </div>
     </div>
   </div>
   <div class="day" id="day24">
