--- a/index.html
+++ b/index.html
@@ -172,13 +172,16 @@
         <div id="close">X</div>
       </div>
     </div>
-  </div>
-  <div class="day" id="day24">
-    <div id="popup">
-      <h2>This is a popup</h2>
-      <p>You just triggered a popup</p>
-      <div id="close">X</div>
+    <div class="day" id="day10">
+      <div id="popup">
+        <div class="overlay">
+          <h1>10. Dezember</h1>
+          <i>-- Niki</i>
+          <p>
+            Das passiert wenn man zu viele Kekse isst ... <br />
+            <a target="_blank" href="https://youtu.be/Qota928VTXw">https://youtu.be/Qota928VTXw</a>
+          </p>
+        </div>
+        <div id="close">X</div>
+      </div>
     </div>
-  </div>
-</body>
-</html>
