--- a/index.html
+++ b/index.html
@@ -185,3 +185,26 @@
         <div id="close">X</div>
       </div>
     </div>
+    <div class="day" id="day11">
+      <div id="popup">
+        <div class="overlay">
+          <h1>11. Dezember</h1>
+          <i>-- Geli</i>
+          <p>
+            Ich muss sagen, ich bin ein großer Fan der Vorweihnachtszeit. ☺️🎄
+            Glitzernde Weihnachtsbeleuchtung 🎇, ein paar Schneeflöckchen ❄️, ruhige, gemütliche Tage daheim ☕, duftendes ungesundes Weihnachtsgebäck 🍪, chillige Weihnachtsmusik 🎶, ... Herrlich... ☺️🎄<br />
+            Die Realität sieht mit meinen 3 Männern zumeist ein wenig anders und actiongeladener aus, weshalb ihr heute auch einen etwas anderen Ohrwurm von mir bekommt, und zwar den meiner tatsächlichen Vorweihnachtszeit.. 😉🎶🤘🎸</p>
+            <p>
+              Handlungsanweisung:
+              <ol>
+                <li>eventuell Vorhänge zuziehen, wenn man Nachbarn hat</li>
+                <li>Licht dimmen</li>
+                <li>Musik voll aufdrehen</li>
+                <li>Mit Familie / Freunden (aus dem gemeinsamen Haushalt ☝️) auf der Couch springen und Luftgitarre spielen bis einem die Luft ausgeht 😉</li>
+              </ol>
+              <a target="_blank" href="https://youtu.be/v2AC41dglnM">https://youtu.be/v2AC41dglnM</a>
+            </p>
+          </div>
+          <div id="close">X</div>
+        </div>
+      </div>
