--- a/index.html
+++ b/index.html
@@ -208,3 +208,30 @@
           <div id="close">X</div>
         </div>
       </div>
+      <div class="day" id="day12">
+        <div id="popup">
+          <div class="overlay">
+            <h1>12. Dezember</h1>
+            <i>-- Daniel</i>
+            <p>
+              Ein paar erste Winterfotos für unseren Adventskalender.
+            </p>
+            <img src="./img/day12/1.jpeg" alt="winter" />
+            <img src="./img/day12/2.jpeg" alt="winter" />
+            <img src="./img/day12/3.jpeg" alt="winter" />
+            <img src="./img/day12/4.jpeg" alt="winter" />
+            <img src="./img/day12/5.jpeg" alt="winter" />
+            <img src="./img/day12/6.jpeg" alt="winter" />
+            <p>
+              Einmal für die wilden unter uns:
+              <a target="_blank" href="https://youtu.be/In3sApWlY1s">https://youtu.be/In3sApWlY1s</a>
+            </p>
+            <p>
+              Und einmal für die romantischen:
+              <a target="_blank" href="https://youtu.be/2MfAHKnAce0">https://youtu.be/2MfAHKnAce0</a>
+            </p>
+            <p>Wünsche euch ein schönes 3. Adventswochenende und ein negatives Testergebnis! 😉🤗</p>
+          </div>
+          <div id="close">X</div>
+        </div>
+      </div>
