--- a/index.html
+++ b/index.html
@@ -235,3 +235,19 @@
           <div id="close">X</div>
         </div>
       </div>
+      <div class="day" id="day13">
+        <div id="popup">
+          <div class="overlay">
+            <h1>13. Dezember</h1>
+            <i>-- Philipp L.</i>
+            <p>
+              Leider sind weiße Weihnachten in den Städten immer seltener. 🌧️
+              Daher hier eine kurze Erinnerung aus dem Jahre 1897, was man mit der weißen Pracht (auch als Erwachsener!) sonst noch so machen kann. Achtet besonders auf den Radlfahrer 😊
+              Ich wünsche euch einen schönen 3. Adventsonntag! 🕯️🕯️🕯️<br /><br />
+              <a target="_blank" href="https://youtube.com/watch?v=tuFu9-bfnQk">https://youtube.com/watch?v=tuFu9-bfnQk</a>
+            </p>
+            <img src="./img/day13/winter1897.jpeg" alt="winter, 1897" />
+          </div>
+          <div id="close">X</div>
+        </div>
+      </div>
