--- a/index.html
+++ b/index.html
@@ -251,3 +251,87 @@
           <div id="close">X</div>
         </div>
       </div>
+      <div class="day" id="day14">
+        <div id="popup">
+          <div class="overlay">
+            <h1>14. Dezember</h1>
+            <i>-- Rebecca</i>
+            <p>
+              Das heute Adventkalendertürchen zeigt euch einen kleinen Ausschnitt aus der heurigen Weihnachts- & Wichtel-Werkstatt im Hause Eresheim aus dem Burgenland 🤗 🎅🏼🎄❄️
+            </p>
+            <img src="./img/day14/wichtelwerkstatt.jpeg" alt="Wichtelwerkstatt" />
+          </div>
+          <div id="close">X</div>
+        </div>
+      </div>      <div class="day" id="day15">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day16">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day17">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day18">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day19">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day20">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day21">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day22">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day23">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+      <div class="day" id="day24">
+        <div id="popup">
+          <h2>This is a popup</h2>
+          <p>You just triggered a popup</p>
+          <div id="close">X</div>
+        </div>
+      </div>
+    </body>
+    </html>
