--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <link rel="stylesheet" href="./css/styles.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./js/script.js"></script>
-  <title>RIM Adventkalender 2020</title>
+  <title>RIM Adventskalender 2020</title>
 </head>
 <body>
   <audio id="player" src="./audio/letitsnow.mp3" controls loop autoplay></audio>
   <div class="container">
-    <h1>RIM Adventkalender 2020</h1>
+    <h1>RIM Adventskalender 2020</h1>
     <div class="tree">
       <div class="img">
         <div id="star">⭐️</div>
@@ -40,7 +40,7 @@
         <div class="ball ball-l ball-red" id="ball24">24</div>
       </div>
     </div>
-    <h2>Frohe Weihnachten</h2>
+    <h2>Frohe Weihnachten!</h2>
   </div>
   <div class="day" id="day1">
     <div id="popup">
@@ -52,7 +52,7 @@
         <p>Der Winter</p>
         <img src="./img/day1/der_winter.jpeg" alt="Der Winter" />
       </div>
-      <div id="close">X</div>
+      <div id="close">x</div>
     </div>
   </div>
   <div class="day" id="day2">
@@ -63,7 +63,7 @@
         <p>Da leider Langenzersdorf z.Zt. grau und nicht weiß ist, musste ich auf einen Besuch in St. Gilgen am Wolfgangsees zurückgreifen 🧑‍🎄⛄️</p>
         <img src="./img/day2/kerze.jpeg" alt="Die Kerze" />
       </div>
-      <div id="close">X</div>
+      <div id="close">x</div>
     </div>
   </div>
   <div class="day" id="day3">
@@ -74,7 +74,7 @@
         <p></p>
         <img src="./img/day3/anita.jpeg" alt="day3" />
       </div>
-      <div id="close">X</div>
+      <div id="close">x</div>
     </div>
   </div>
   <div class="day" id="day4">
@@ -85,7 +85,7 @@
         <p>Unser erster "Schneemann" der startenden Wintersaisn... 😜</p>
         <img src="./img/day4/snowman.jpeg" alt="snowman" />
       </div>
-      <div id="close">X</div>
+      <div id="close">x</div>
     </div>
   </div>
   <div class="day" id="day5">
@@ -107,7 +107,7 @@
           <li>Stirb langsam und Mundl</li>
         </ol>
       </div>
-      <div id="close">X</div>
+      <div id="close">x</div>
     </div>
   </div>
   <div class="day" id="day6">
@@ -121,7 +121,7 @@
           <p>Andi wollte auch Lebkuchen machen. Dachte er macht vielleicht Sterne oder Christbäume. Das ist dabei raus gekommen. 😆😅🙈</p>
           <img src="./img/day6/cookies2.jpeg" alt="cookies" />
         </div>
-        <div id="close">X</div>
+        <div id="close">x</div>
       </div>
     </div>
     <div class="day" id="day7">
@@ -132,7 +132,7 @@
           <p>Rudolf das Rentier und seine zwei Helferlein wünschen euch eine schöne und hoffentlich stressfreie Adventszeit!🎄</p>
           <img src="./img/day7/marian.jpeg" alt="Marian" />
         </div>
-        <div id="close">X</div>
+        <div id="close">x</div>
       </div>
     </div>
     <div class="day" id="day8">
@@ -143,7 +143,7 @@
           <p>Heute kommt ein wenig Vorfreude auf Schnee und Skifahren😊🗻🎿⛷️</p>
           <p><i>Hier ist der Link zum <a target="_blank" href="video/day8/day8.mp4">Video</a>.</i></p>
         </div>
-        <div id="close">X</div>
+        <div id="close">x</div>
       </div>
     </div>
     <div class="day" id="day9">
@@ -169,7 +169,7 @@
           </p>
           <img src="./img/day9/chart.jpeg" alt="chart" />
         </div>
-        <div id="close">X</div>
+        <div id="close">x</div>
       </div>
     </div>
     <div class="day" id="day10">
@@ -182,7 +182,7 @@
             <a target="_blank" href="https://youtu.be/Qota928VTXw">https://youtu.be/Qota928VTXw</a>
           </p>
         </div>
-        <div id="close">X</div>
+        <div id="close">x</div>
       </div>
     </div>
     <div class="day" id="day11">
@@ -205,7 +205,7 @@
               <a target="_blank" href="https://youtu.be/v2AC41dglnM">https://youtu.be/v2AC41dglnM</a>
             </p>
           </div>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day12">
@@ -232,7 +232,7 @@
             </p>
             <p>Wünsche euch ein schönes 3. Adventswochenende und ein negatives Testergebnis! 😉🤗</p>
           </div>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day13">
@@ -248,7 +248,7 @@
             </p>
             <img src="./img/day13/winter1897.jpeg" alt="winter, 1897" />
           </div>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day14">
@@ -261,7 +261,7 @@
             </p>
             <img src="./img/day14/wichtelwerkstatt.jpeg" alt="Wichtelwerkstatt" />
           </div>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day15">
@@ -275,7 +275,7 @@
               <a target="_blank" href="https://youtu.be/efNhd_N7QXQ">https://youtu.be/efNhd_N7QXQ</a>
             </p>
           </div>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day16">
@@ -289,56 +289,56 @@
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day18">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day19">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day20">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day21">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day22">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day23">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day24">
         <div id="popup">
           <h2>This is a popup</h2>
           <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div id="close">x</div>
         </div>
       </div>
     </body>
