--- a/index.html
+++ b/index.html
@@ -280,9 +280,13 @@
       </div>
       <div class="day" id="day16">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
-          <div id="close">X</div>
+          <div class="overlay">
+            <h1>16. Dezember</h1>
+            <i>-- Philipp L.</i>
+            <p>Hier unser Weihnachtsbaum, der sich nach dem Aufstellen mehr breit als hoch herausgestellt hat (er steht deswegen jetzt auf einem Stockerl, damit er optisch größer scheint 😅)🎄</p>
+            <img src="./img/day16/christmas_tree.jpeg" alt="Christmas Tree" />
+          </div>
+          <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day17">
