--- a/index.html
+++ b/index.html
@@ -291,8 +291,12 @@
       </div>
       <div class="day" id="day17">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
+          <div class="overlay">
+            <h1>17. Dezember</h1>
+            <i>-- Christian G.</i>
+            <p>Liebe Leute, das 17. Türchen 🚪 im RIM-Adventskalender hält ein besonderes Highlight für euch bereit: den derzeitigen Baufortschritt der Weihnachtskrippe der Familie Grob. Wir sind guter Dinge dass wir es bis 24. in etlichen Nachtschichten noch schaffen 😉!</p>
+            <img src="./img/day17/day17.jpeg" alt="Weihnachtsdeko" />
+          </div>
           <div id="close">x</div>
         </div>
       </div>
