--- a/index.html
+++ b/index.html
@@ -302,8 +302,11 @@
       </div>
       <div class="day" id="day18">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
+          <div class="overlay">
+            <h1>18. Dezember</h1>
+            <i>-- Monika</i>
+            <p><i>Monika hat ein tolles <a target="_blank" href="video/day18/day18.mp4">Video</a> für uns aufgenommen.</i></p>
+          </div>
           <div id="close">x</div>
         </div>
       </div>
