--- a/index.html
+++ b/index.html
@@ -312,8 +312,13 @@
       </div>
       <div class="day" id="day19">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
+          <div class="overlay">
+            <h1>19. Dezember</h1>
+            <i>-- Christian T.</i>
+            <p><i>Christian hat uns zwei seiner Lieblingsweihnachtslieder gesendet. Also spitzt die Ohren</i> 🤩 <br />
+            <a target="_blank" href="https://youtu.be/0GWFdFqLKZ4">Lied 1</a><br />
+            <a target="_blank" href="audio/day19/day19.mp4">Lied 2</a></p>
+          </div>
           <div id="close">x</div>
         </div>
       </div>
