--- a/index.html
+++ b/index.html
@@ -324,8 +324,16 @@
       </div>
       <div class="day" id="day20">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
+          <div class="overlay">
+            <h1>20. Dezember</h1>
+            <i>-- Thomas</i>
+            <p>
+              Das 20ste Türchen des RIM Adventskalenders zeigt einen kleinen Blick auf unseren Weihnachtsbaum den unsere Kinder diesmal ganz ohne Hilfe geschmückt haben.
+              Eine wunderschöne, besinnliche und ruhige Weihnachtszeit wünsche ich Euch allen! <br />
+              Liebe Grüße Thomas und Familie
+            </p>
+            <img src="./img/day20/day20.jpeg" alt="Weihnachtsbaum" />
+          </div>
           <div id="close">x</div>
         </div>
       </div>
