--- a/index.html
+++ b/index.html
@@ -339,8 +339,11 @@
       </div>
       <div class="day" id="day21">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
+          <div class="overlay">
+            <h1>21. Dezember</h1>
+            <i>-- Sebastian</i>
+            <p><i>Für die Weihnachtsstimmung am 21. hat Sebastian mit diesem coolen <a target="_blank" href="video/day21/day21.mp4">Video</a> gesorgt.</i></p>            
+          </div>
           <div id="close">x</div>
         </div>
       </div>
