--- a/index.html
+++ b/index.html
@@ -342,15 +342,20 @@
           <div class="overlay">
             <h1>21. Dezember</h1>
             <i>-- Sebastian</i>
-            <p><i>Für die Weihnachtsstimmung am 21. hat Sebastian mit diesem coolen <a target="_blank" href="video/day21/day21.mp4">Video</a> gesorgt.</i></p>            
+            <p><i>Für die Weihnachtsstimmung am 21. hat Sebastian mit diesem coolen <a target="_blank" href="./video/day21/day21.mp4">Video</a> gesorgt.</i></p>
           </div>
           <div id="close">x</div>
         </div>
       </div>
       <div class="day" id="day22">
         <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
+          <div class="overlay">
+            <h1>22. Dezember</h1>
+            <i>-- Susi</i>
+            <p>
+              Ich öffne hiermit das 22. Kasterl am RIM-Adventskalender! Mein Kasterl ist zweiteilig. Als 1.) eine <a target="_blank" href="./video/day22/day22.mp4">kleine Geschichte</a>, vorgelesen von mir 😉 2.) eine <a target="_blank" href="https://youtu.be/PeYOmJZqzpI">kurze Filmsequenz</a> aus einem der beiden Weihnachtsfilme, die traditionell am 24.12. bei uns am Abend angeschaut werden (also von Andi und mir). Nr. 2) passt inhaltlich sogar ein wenig zu meiner Geschichte. Einen schönen Feierabend wünsche ich euch ❤️
+            </p>
+          </div>
           <div id="close">x</div>
         </div>
       </div>
