--- a/index.html
+++ b/index.html
@@ -316,62 +316,72 @@
             <h1>19. Dezember</h1>
             <i>-- Christian T.</i>
             <p><i>Christian hat uns zwei seiner Lieblingsweihnachtslieder gesendet. Also spitzt die Ohren</i> 🤩 <br />
-            <a target="_blank" href="https://youtu.be/0GWFdFqLKZ4">Lied 1</a><br />
-            <a target="_blank" href="audio/day19/day19.mp4">Lied 2</a></p>
+              <a target="_blank" href="https://youtu.be/0GWFdFqLKZ4">Lied 1</a><br />
+              <a target="_blank" href="audio/day19/day19.mp4">Lied 2</a></p>
+            </div>
+            <div id="close">x</div>
           </div>
-          <div id="close">x</div>
         </div>
-      </div>
-      <div class="day" id="day20">
-        <div id="popup">
-          <div class="overlay">
-            <h1>20. Dezember</h1>
-            <i>-- Thomas</i>
-            <p>
-              Das 20ste Türchen des RIM Adventskalenders zeigt einen kleinen Blick auf unseren Weihnachtsbaum den unsere Kinder diesmal ganz ohne Hilfe geschmückt haben.
-              Eine wunderschöne, besinnliche und ruhige Weihnachtszeit wünsche ich Euch allen! <br />
-              Liebe Grüße Thomas und Familie
-            </p>
-            <img src="./img/day20/day20.jpeg" alt="Weihnachtsbaum" />
+        <div class="day" id="day20">
+          <div id="popup">
+            <div class="overlay">
+              <h1>20. Dezember</h1>
+              <i>-- Thomas</i>
+              <p>
+                Das 20ste Türchen des RIM Adventskalenders zeigt einen kleinen Blick auf unseren Weihnachtsbaum den unsere Kinder diesmal ganz ohne Hilfe geschmückt haben.
+                Eine wunderschöne, besinnliche und ruhige Weihnachtszeit wünsche ich Euch allen! <br />
+                Liebe Grüße Thomas und Familie
+              </p>
+              <img src="./img/day20/day20.jpeg" alt="Weihnachtsbaum" />
+            </div>
+            <div id="close">x</div>
           </div>
-          <div id="close">x</div>
         </div>
-      </div>
-      <div class="day" id="day21">
-        <div id="popup">
-          <div class="overlay">
-            <h1>21. Dezember</h1>
-            <i>-- Sebastian</i>
-            <p><i>Für die Weihnachtsstimmung am 21. hat Sebastian mit diesem coolen <a target="_blank" href="./video/day21/day21.mp4">Video</a> gesorgt.</i></p>
+        <div class="day" id="day21">
+          <div id="popup">
+            <div class="overlay">
+              <h1>21. Dezember</h1>
+              <i>-- Sebastian</i>
+              <p><i>Für die Weihnachtsstimmung am 21. hat Sebastian mit diesem coolen <a target="_blank" href="./video/day21/day21.mp4">Video</a> gesorgt.</i></p>
+            </div>
+            <div id="close">x</div>
           </div>
-          <div id="close">x</div>
         </div>
-      </div>
-      <div class="day" id="day22">
-        <div id="popup">
-          <div class="overlay">
-            <h1>22. Dezember</h1>
-            <i>-- Susi</i>
-            <p>
-              Ich öffne hiermit das 22. Kasterl am RIM-Adventskalender! Mein Kasterl ist zweiteilig. Als 1.) eine <a target="_blank" href="./video/day22/day22.mp4">kleine Geschichte</a>, vorgelesen von mir 😉 2.) eine <a target="_blank" href="https://youtu.be/PeYOmJZqzpI">kurze Filmsequenz</a> aus einem der beiden Weihnachtsfilme, die traditionell am 24.12. bei uns am Abend angeschaut werden (also von Andi und mir). Nr. 2) passt inhaltlich sogar ein wenig zu meiner Geschichte. Einen schönen Feierabend wünsche ich euch ❤️
-            </p>
+        <div class="day" id="day22">
+          <div id="popup">
+            <div class="overlay">
+              <h1>22. Dezember</h1>
+              <i>-- Susi</i>
+              <p>
+                Ich öffne hiermit das 22. Kasterl am RIM-Adventskalender! Mein Kasterl ist zweiteilig. Als 1.) eine <a target="_blank" href="./video/day22/day22.mp4">kleine Geschichte</a>, vorgelesen von mir 😉 2.) eine <a target="_blank" href="https://youtu.be/PeYOmJZqzpI">kurze Filmsequenz</a> aus einem der beiden Weihnachtsfilme, die traditionell am 24.12. bei uns am Abend angeschaut werden (also von Andi und mir). Nr. 2) passt inhaltlich sogar ein wenig zu meiner Geschichte. Einen schönen Feierabend wünsche ich euch ❤️
+              </p>
+            </div>
+            <div id="close">x</div>
           </div>
-          <div id="close">x</div>
         </div>
-      </div>
-      <div class="day" id="day23">
-        <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
-          <div id="close">x</div>
+        <div class="day" id="day23">
+          <div id="popup">
+            <div class="overlay">
+              <h1>23. Dezember</h1>
+              <i>-- Julia</i>
+              <p>
+                Guten Morgen! <br />
+                Im Jahr, das von Corona dominiert ist, schicken wir Euch heute auch noch die Vogelgrippe, äh sorry <a target="_blank" href="./video/day23/day23.mp4">Vogelkrippe</a> 🤪... in diesem Sinne: nie den Humor verlieren!!!  <br />
+                Wir wünschen einen entspannten letzten Arbeitstag und morgen ein schönes Fest! 💃🏿🎄🕺 <br />                
+              </p>
+            </div>
+            <div id="close">x</div>
+          </div>
         </div>
-      </div>
-      <div class="day" id="day24">
-        <div id="popup">
-          <h2>This is a popup</h2>
-          <p>You just triggered a popup</p>
-          <div id="close">x</div>
+        <div class="day" id="day24">
+          <div id="popup">
+            <div class="overlay">
+              <h1>24. Dezember</h1>
+              <i>-- Geri</i>
+              <p>Frohe Weihnachten!</p>
+            </div>
+            <div id="close">x</div>
+          </div>
         </div>
-      </div>
-    </body>
-    </html>
+      </body>
+      </html>
